Conexión inicial a SQL Server por medio de Entity Framework.

--- a/ProyectoRoot/appsettings.json
+++ b/ProyectoRoot/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "ServidorLocal1": "Server=LUII-COMPUTER; DataBase=BD_EntityFramework_1; Trusted_Connection=true;",
+    "ServidorProduccion1": "Server=LUII-COMPUTER; DataBase=BD_EntityFramework_1; Trusted_Connection=true;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
